--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
                      <li><a href="#" aria-label="About This Site">About This Site</a></li>
-                     <li><a href="#" aria-label="Present Login UserName"><img src="images/user-image.png"
-                        alt="Present login student image" class="user-img" longdesc="#"> <span class="username">Jane doe
+                     <li><a href="#" aria-label="Present Login UserName">
+                        <image src="images/user-image.png" alt="Profile Picture" class="user-img" longdesc="#"></image> <span class="username">Jane doe
                            <span><img src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></span> </span> <span
                            class="california">california</span></a>
                         </li>
