--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
             <!--Logo-->
             <div id="logo">
                <a href="https://kastech-india.github.io/SBAC/index.html" class="logo">
-                  <image src="https://kastech-india.github.io/SBAC/images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html">
-               </image>
-                     </a>
+                  <image src="images/SmarterBalanced_logo.png"  alt= " " "smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
+               </a>
             </div>
             <!--End: Logo-->                
             <!--Navigation Resposnive Trigger-->
@@ -42,9 +41,9 @@
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
                      <li><a href="#" aria-label="About This Site">About This Site</a></li>
-                     <li><a href="#" aria-label="Present Login UserName">
-                        <image src="images/user-image.png" alt="Profile Picture" class="user-img" longdesc="#"></image> <span class="username">Jane doe
-                           <span><img src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></span> </span> <span
+                     <li><a href="#" aria-label="Present Login UserName"><image src="images/user-image.png"
+                        alt="Present login student image" class="user-img" longdesc="#"></image> <span class="username">Jane doe
+                           <span><image src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></image></span> </span> <span
                            class="california">california</span></a>
                         </li>
                      </ul>
@@ -77,7 +76,7 @@
          <div class="col-md-12">
             <div class="row">
                <div class="col-md-4 fruits-img">
-                  <img src="images/fruits-image.JPG"  longdesc="#" alt="Connecting fraction division equations to visual Models"/>                    
+                  <image src="images/fruits-image.JPG"  longdesc="#" alt="Connecting fraction division equations to visual Models"/>  </image>                  
                </div>
                <div class="col-md-8">
                   <div class="row">
@@ -248,7 +247,7 @@
                            Formative Strategies</a> 
                         </div>
                         <div class="col-md-3 text-center xs-28">
-                           <a href="#" data-target="#accessibility" data-toggle="modal"><img src="images/arrows.png" longdesc="#" alt="Accessibility Strategies modal" width="50">
+                           <a href="#" data-target="#accessibility" data-toggle="modal"><image src="images/arrows.png" longdesc="#" alt="Accessibility Strategies modal" width="50"></image>
                            Accessibility Strategies</a> 
                         </div>
                      </div>
@@ -426,15 +425,14 @@
                <div class="col-md-6">
                   <h4 class="m-b-5">Tips from Teachers </h4>
                   <p class="m-b-25">Here’s how other educators used this resource. </p>
-                  <h5 class="gradeimage"><span><img src="images/user-image.png"  longdesc="#" alt=""></span>Grade 6 math teacher in Washington</h5>
+                  <h5 class="gradeimage"><span><image src="images/user-image.png"  longdesc="#" alt=""></image></span>Grade 6 math teacher in Washington</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper lacinia gravida. Donec luctus lacus sed nisi ultrices, in cursus eros consequat. Nunc suscipit viverra lacinia. Nullam aliquam quam a nisl consequat, ac tincidunt magna malesuada. Donec tristique, metus at euismod lacinia, libero risus porttitor lorem, sit amet consectetur est nisi euismod mauris.</p>
                   <div class="row submit-bar">
                      <em class="gradebottom col-sm-12 col-md-6 text-left">Submitted September 6, 2018</em>
                      <p class="gradebottom col-md-6 col-sm-12 text-right">Helpful <span class="m-l-15"><em class="fas fa-thumbs-down"></em></span> 10% <span class="m-l-15"><em class="fas fa-thumbs-up down"></em></span> 90%</p>
                   </div>
                   <div class="linetwo m-t-20 m-b-20"></div>
-                  <h5 class="gradeimage"><span><img src="images/user-image.png"  longdesc="#" alt="Grade 6 math teacher in Washington
-                     image"></span>Grade 6 math teacher in Washington</h5>
+                  <h5 class="gradeimage"><span><image src="images/user-image.png"  longdesc="#" alt="Grade 6 math teacher in Washington image"> </image></span>Grade 6 math teacher in Washington</h5>
                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper lacinia gravida. Donec luctus lacus sed nisi ultrices, in cursus eros consequat. Nunc suscipit viverra lacinia. Nullam aliquam quam a nisl consequat, ac tincidunt magna malesuada. Donec tristique, metus at euismod lacinia, libero risus porttitor lorem, sit amet consectetur est nisi euismod mauris.</p>
                      <div class="row submit-bar">
                         <em class="gradebottom col-sm-12 col-md-6 text-left">Submitted September 6, 2018</em>
@@ -454,7 +452,7 @@
                      <div class="leftimg-box">
                         <div class="row border m-b-60">
                            <div class="col-md-3 col-lg-4 col-sm-6 p-l-0">
-                              <img src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive">
+                              <image src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive"></image>
                            </div>
                            <div class="col-md-9 col-lg-8 p-l-0">
                               <div class="resourceside">
@@ -484,7 +482,7 @@
                         </div>
                         <div class="row border m-b-60">
                            <div class="col-md-3 col-lg-4 col-sm-6 p-l-0 ">
-                              <img src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive">
+                              <image src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive"></image>
                            </div>
                            <div class="col-md-9 col-lg-8 p-l-0 ">
                               <div class="resourceside ">
@@ -514,7 +512,7 @@
                         </div>
                         <div class="row border m-b-60">
                            <div class="col-md-3 col-lg-4 col-sm-6 p-l-0">
-                              <img src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive">
+                              <image src="images/leaves.png"  longdesc="#" alt="Resource title image" class="img-responsive"></image>
                            </div>
                            <div class="col-md-9 col-lg-8 p-l-0">
                               <div class="resourceside">
@@ -560,7 +558,7 @@
                   </div>
                   <div class="col-md-6 text-right">
                      <div class="footerlogo">
-                        <img src="images/footer-logo.png"  longdesc="#" alt="Smart balanced footer logo" width="250" />
+                        <image src="images/footer-logo.png"  longdesc="#" alt="Smart balanced footer logo" width="250" /></image>
                      </div>
                   </div>
                </div>
@@ -695,7 +693,7 @@
          <div class="modal-dialog modal-lg">
             <div class="modal-content modalmainbox">
                <div class="modal-header modalcontent border-bottom">
-                  <span><img src="images/arrows.png"  longdesc="#" alt="Accessibility Strategies icon" width="30"></span>
+                  <span><image src="images/arrows.png"  longdesc="#" alt="Accessibility Strategies icon" width="30"></image></span>
                   <h4 id="modal-label-4" class="modal-title">ACCESSIBILITY STRATEGIES IN THIS RESOURCE</h4>
                   <button aria-hidden="true" data-dismiss="modal" class="close " >×</button>
                </div>
