--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
    </header>
    <section class="breadcrumbs p-0 p-t-5 p-b-5">
       <div class="container-fluid">
-         <h2>for allignment</h2>
+         <strong>for allignment</strong>
          <div class="col-md-12">
             <nav aria-label="breadcrumb">
                <ol class="breadcrumb m-0">
