--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    <!-- Document title -->
    <title>Connecting Fraction Division Equations</title>
+   <link rel="shortcut icon" href="images/sbsmall.png">
+
    <!-- Stylesheets & Fonts -->      
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
    crossorigin="anonymous">
@@ -21,7 +23,7 @@
             <!--Logo-->
             <div id="logo">
                <a href="https://kastech-india.github.io/SBAC/index.html" class="logo">
-                  <image src="images/SmarterBalanced_logo.png"  alt= " " "smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
+                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
             <!--End: Logo-->                
@@ -107,7 +109,7 @@
                      </div>
                   </div>
                   <div class="grade-boxtwo">
-                     <h3>Connecting fraction division equations to visual Models</h3>
+                     <strong>Connecting fraction division equations to visual Models</strong>
                      <div class="row ">
                         <div class="col-md-4 col-sm-6">
                            <em class="m-b-10">Contributrd by: Diana Prince</em>
@@ -552,7 +554,7 @@
                <div class="row">
                   <div class="col-md-6 text-left">
                      <div class="draftcontent">
-                        <h3>Draft</h3>
+                        <strong>Draft</strong>
                         <p>&copy; 2018 The Regents of the University of California</p>
                      </div>
                   </div>
