--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
    </header>
    <section class="breadcrumbs p-0 p-t-5 p-b-5">
       <div class="container-fluid">
-         <strong>for allignment</strong>
+         <strong class="for-content">for allignment</strong>
          <div class="col-md-12">
             <nav aria-label="breadcrumb">
                <ol class="breadcrumb m-0">
@@ -109,7 +109,7 @@
                      </div>
                   </div>
                   <div class="grade-boxtwo">
-                     <strong>Connecting fraction division equations to visual Models</strong>
+                     <strong class="cf-content">Connecting fraction division equations to visual Models</strong>
                      <div class="row ">
                         <div class="col-md-4 col-sm-6">
                            <em class="m-b-10">Contributrd by: Diana Prince</em>
