--- a/index.html
+++ b/index.html
@@ -120,23 +120,23 @@
                      </div>
                      <div class="row">
                         <div class="col-md-4 col-sm-6">
-                           <h4>Clam <span><em aria-hidden="true" class="fas fa-info-circle" title="Problem Solving"></em></span></h4>
+                           <strong class="clamcontent">Clam <span><em aria-hidden="true" class="fas fa-info-circle" title="Problem Solving"></em></span></strong>
                            <p class="clam-p">2: Problem Solving</p>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                           <h4>Target <span><em aria-hidden="true" class="fas fa-info-circle" title="The number System"></em></span></h4>
+                           <strong class="clamcontent">Target <span><em aria-hidden="true" class="fas fa-info-circle" title="The number System"></em></span></strong>
                            <p class="clam-p">B: The Number System</p>
                         </div>
                         <div class="col-md-4 col-sm-6">
-                           <h4>Connections playlist <span><em aria-hidden="true" class="fas fa-info-circle" title="Grade 6 Fractions"></em></span></h4>
+                           <strong class="clamcontent">Connections playlist <span><em aria-hidden="true" class="fas fa-info-circle" title="Grade 6 Fractions"></em></span></strong>
                            <p class="clam-p">Grade 6 Fractions</p>
                         </div>
                         <div class="col-md-7 col-sm-12">
-                           <h4>Learning Goal <span><em aria-hidden="true" class="fas fa-info-circle" title="Learning Goal"></em></span></h4>
+                           <strong class="clamcontent">Learning Goal <span><em aria-hidden="true" class="fas fa-info-circle" title="Learning Goal"></em></span></strong>
                            <p class="morelink">The student can solve real-word and mathemetical one-<br> step problems involving division of <a href="#">MORE...</a></p>
                         </div>
                         <div class="col-md-5 col-sm-12">
-                           <h4>Resource Rating  <span class="ratings"> <em>20 Ratings</em></span></h4>
+                           <strong class="clamcontent">Resource Rating  <span class="ratings"> <em>20 Ratings</em></span></strong>
                            <div class="row">
                               <div class="col-md-4 col-sm-4 text-left  percol">
                                  <p class="smile"><span><em aria-hidden="true" class="far fa-smile" title="80 percentage"></em> </span> 80%</p>
