--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                <div class="col-md-4">
                   <div class="theresourcebox">
                      <div class="resourceinbox">
-                        <h4>In the resource...</h4>
+                        <strong>In the resource...</strong>
                         <div id="accordion" class="panel-group" >
                            <div class="panel panel-default">
                               <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#Quick">
@@ -425,7 +425,7 @@
          <div class="col-md-12">
             <div class="row">
                <div class="col-md-6">
-                  <h4 class="m-b-5">Tips from Teachers </h4>
+                  <strong class="m-b-5">Tips from Teachers </strong>
                   <p class="m-b-25">Here’s how other educators used this resource. </p>
                   <h5 class="gradeimage"><span><image src="images/user-image.png"  longdesc="#" alt=""></image></span>Grade 6 math teacher in Washington</h5>
                   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ullamcorper lacinia gravida. Donec luctus lacus sed nisi ultrices, in cursus eros consequat. Nunc suscipit viverra lacinia. Nullam aliquam quam a nisl consequat, ac tincidunt magna malesuada. Donec tristique, metus at euismod lacinia, libero risus porttitor lorem, sit amet consectetur est nisi euismod mauris.</p>
@@ -450,7 +450,7 @@
                      </div>
                   </div>
                   <div class="col-md-6">
-                     <h4>Related Resource</h4>
+                     <strong class="relatedcont">Related Resource</strong>
                      <div class="leftimg-box">
                         <div class="row border m-b-60">
                            <div class="col-md-3 col-lg-4 col-sm-6 p-l-0">
