--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
                      <div id="accordionone" class="panel-group" >
                         <div class="panel panel-default">
                            <div class="panel-heading collapsed" data-toggle="collapse" data-parent="#accordion" data-target="#waterMindDistrictMeteres">
-                              <h5 class="panel-title accordion-toggle  bigaccordion">                                     
+                              <strong class="panel-title accordion-toggle  bigaccordion">                                     
                                  Quick Look
-                              </h5>
+                              </strong>
                            </div>
                            <p class="col-md-12">In this task, Students will engage with divison of fraction tasks that use the same context but require students to divide the fractions in the opposite order. Students solve the tasks by creating visual models, selecting the equations and comparing back to the visual modela. Students will work to answer the question, "how do these numbers and operation work together?"<a href="#waterMindDistrictMeteres" class="moreText" data-toggle="collapse" data-parent="#accordion" data-target="#waterMindDistrictMeteres"> more...</a></p>
                            <div class="line m-t-10 m-b-10"></div>                              
@@ -442,9 +442,9 @@
                      </div>
                      <div class="linetwo m-t-20 m-b-20"></div>
                      <em class="text-right">3 tips are waiting for approval</em>
-                     <h5>Share your trip</h5>
+                     <strong>Share your trip</strong>
                      <p>Share how you used this resource. How did it go? How did you adapt it for your students? What should other teachers know as they use it in their classrooms?</p>
-                     <textarea class="textarea t-box" cols="20" placeholder="Tell us what you think!" title="Type here Tell us what you think!"></textarea>
+                     <textarea class="textarea t-box" cols="20" placeholder="Tell us what you think!" title="Type here Tell us what you think!"> </textarea>
                      <div class="text-left">
                         <button class="btn btn-submit " aria-label="Submit">Submit</button>
                      </div>
@@ -458,7 +458,7 @@
                            </div>
                            <div class="col-md-9 col-lg-8 p-l-0">
                               <div class="resourceside">
-                                 <h5 class="m-b-5">RESOURCE TITLE</h5>
+                                 <strong class="m-b-5">RESOURCE TITLE</strong>
                                  <div class="row">
                                     <div class="col-md-4 col-lg-4 p-r-0 col-sm-6">
                                        <div class="math-grade m-t-10">
