--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <nav>
                      <!--left menu-->
                      <ul>
-                        <li class="active"><a href="index.html" aria-label="Instuctional Support">Instuctional
+                        <li class="active"><a href="index.html" aria-label="Instructional Support">Instructional 
                         Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
