--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                   <nav>
                      <!--left menu-->
                      <ul>
-                        <li class="active"><a data-href="Instructional Support.html">Instructional 
+                        <li class="active"><a href="javascrip:void{0};">Instructional 
                         Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
