--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
    <meta name="viewport" content="width=device-width, initial-scale=1" />
    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-   <!-- Document title -->
+   <!-- Document title ----->
    <title>Connecting Fraction Division Equations</title>
    <link rel="shortcut icon" href="images/sbsmall.png">
 
