--- a/index.html
+++ b/index.html
@@ -586,10 +586,9 @@
                            <p  class="border-bottom p-b-10">Ideas<br><em>9/27/18</em></p>
                         </div>
                      </div>
-                     <div class="col-md-8 border-left">
-                        
+                     <div class="col-md-8 border-left">                        
                         <label for="new-note">New Note</label>
-                        <input  type="text" name="title" id="new-note"  title="New Note title" class="form-control border" placeholder="Title" />
+                        <input  type="textr" name="title" id="new-note"  title="New Note title" class="form-control border" placeholder="Title" />
                         <div class="grpspan"><span><em class="fas fa-bold"></em></span> 
                            <span><em class="fas fa-italic"></em></span>
                            <span><em class="fas fa-list"></em></span>
