--- a/index.html
+++ b/index.html
@@ -587,8 +587,8 @@
                         </div>
                      </div>
                      <div class="col-md-8 border-left">                        
-                        <label for="new-note">New Note</label>
-                        <input  type="textr" name="title" id="new-note"  title="New Note title" class="form-control border" placeholder="Title" />
+                        <label for="newnote">New Note</label>
+                        <input  type="textr" name="newnote" id="newnote"  title="New Note title" class="form-control border" placeholder="Title" />
                         <div class="grpspan"><span><em class="fas fa-bold"></em></span> 
                            <span><em class="fas fa-italic"></em></span>
                            <span><em class="fas fa-list"></em></span>
