--- a/index.html
+++ b/index.html
@@ -588,7 +588,7 @@
                      </div>
                      <div class="col-md-8 border-left">                        
                         <label for="newnote">New Note</label>
-                        <input  type="textr" name="newnote" id="newnote"  title="New Note title" class="form-control border" placeholder="Title" />
+                        <input  type="text" name="newnote" id="newnote"  title="New Note title" class="form-control border" placeholder="Title" />
                         <div class="grpspan"><span><em class="fas fa-bold"></em></span> 
                            <span><em class="fas fa-italic"></em></span>
                            <span><em class="fas fa-list"></em></span>
