--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
                      <em class="text-right">3 tips are waiting for approval</em>
                      <strong>Share your trip</strong>
                      <p>Share how you used this resource. How did it go? How did you adapt it for your students? What should other teachers know as they use it in their classrooms?</p>
-                     <label for="what_you_think"></label>
+                     <label for="what_you_think">what_you_think</label>
                      <textarea id="what_you_think" name="what_you_think" class="textarea t-box" cols="20" placeholder="Tell us what you think!" title="Type here Tell us what you think!"> </textarea>
                      <div class="text-left">
                         <button class="btn btn-submit " aria-label="Submit">Submit</button>
