--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
-               <a data-href="https://kastech-india.github.io/SBAC/index.html" class="logo">
+               <a href="https://kastech-india.github.io/SBAC/index.html" aria-label="More on Using Meaningful Link Text" class="logo">
                   <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
