--- a/index.html
+++ b/index.html
@@ -22,23 +22,21 @@
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
-               <a href="https://kastech-india.github.io/SBAC/index.html" aria-label="More on Using Meaningful Link Text" class="logo">
+              <p class="logo"> 
                   <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
-               </a>
+               </p>
             </div>
-            <!--End: Logo-->                
-            <!--Navigation Resposnive Trigger-->
+            <!--End: Logo-->            
             <div id="mainMenu-trigger">
                <button class="lines-button x"> <span class="lines"></span> </button>
-            </div>
-            <!--end: Navigation Resposnive Trigger-->
+            </div>            
             <!--Navigation-->
             <div id="mainMenu" class="light">
                <div class="container">
                   <nav>
                      <!--left menu-->
                      <ul>
-                        <li class="active"><a href="index.html" aria-label="Instuctional Support">Instuctional
+                        <li class="active"><a href="index.html" aria-label="Instuctional Support"> Instuctional
                         Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
