--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
-              <p class="logo"> 
+               <a href="https://kastech-india.github.io/SBAC/index.html" aria-label="More on Using Meaningful Link Text" class="logo">
                   <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
-               </p>
+               </a>
             </div>
             <!--End: Logo-->            
             <div id="mainMenu-trigger">
