--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
-               <a href="https://kastech-india.github.io/SBAC/index.html" aria-label="More on Using Meaningful Link Text" class="logo">
+               <a data-href="https://kastech-india.github.io/SBAC/index.html" class="logo">
                   <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
-            <!--End: Logo-->            
+            <!--End: Logo-->                
+            <!--Navigation Resposnive Trigger-->
             <div id="mainMenu-trigger">
                <button class="lines-button x"> <span class="lines"></span> </button>
-            </div>            
+            </div>
+            <!--end: Navigation Resposnive Trigger-->
             <!--Navigation-->
             <div id="mainMenu" class="light">
                <div class="container">
                   <nav>
                      <!--left menu-->
                      <ul>
-                        <li class="active"><a href="index.html" aria-label="Instuctional Support"> Instuctional
+                        <li class="active"><a href="index.html" aria-label="Instuctional Support">Instuctional
                         Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
@@ -442,8 +444,7 @@
                      <em class="text-right">3 tips are waiting for approval</em>
                      <strong>Share your trip</strong>
                      <p>Share how you used this resource. How did it go? How did you adapt it for your students? What should other teachers know as they use it in their classrooms?</p>
-                     <label for="what_you_think">what_you_think</label>
-                     <textarea  name="what_you_think" class="textarea t-box" cols="20" placeholder="Tell us what you think!" title="Type here Tell us what you think!"> </textarea>
+                     <textarea class="textarea t-box" cols="20" placeholder="Tell us what you think!" title="Type here Tell us what you think!"> </textarea>
                      <div class="text-left">
                         <button class="btn btn-submit " aria-label="Submit">Submit</button>
                      </div>
