--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <!--Logo-->
             <div id="logo">
                <a data-href="https://kastech-india.github.io/SBAC/index.html" class="logo">
-                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
+                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html" />
                </a>
             </div>
             <!--End: Logo-->                
