--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="Instructional_Support.html" aria-label="Instructional Support">Instructional
+                           <a href="#" aria-label="Instructional Support">Instructional
                         Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
