--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="#">Instructional Support</a>
+                           <a href="#" aria-label="Instructional Support">Instructional Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
                      <li><a href="#" aria-label="About This Site">About This Site</a></li>
