--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="logo">
                <a  data-href="https://kastech-india.github.io/SBAC/index.html" class="logo" title="SmarterBalanced_logo home">
                   <img src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" 
-                       longdesc="https://kastech-india.github.io/SBAC/index.html"/></img>
+                       longdesc="https://kastech-india.github.io/SBAC/index.html"/>
                </a>
             </div>
             <!--End: Logo-->                
