--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
             <!--Logo-->
             <div id="logo">
                <a  data-href="https://kastech-india.github.io/SBAC/index.html" class="logo" title="SmarterBalanced_logo home">
-                  <img src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" 
-                       longdesc="https://kastech-india.github.io/SBAC/index.html"/>
+                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" 
+                       longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
             <!--End: Logo-->                
