--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <script src="js/jquery.js"></script>
+   <script src="js/jquery.js" type="text/javascript" ></script>
    <script src="js/plugins.js"></script>      
    <script src="js/functions.js"></script>
    <script src="js/custom.js"></script>
