--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="#!" aria-label="Instructional Support">Instructional Support</a>
+                           <a href="index.html" aria-label="Instructional Support">Instructional Support</a>
                      </li>
-                     <li><a href="#!" aria-label="Professional Learning">Professional Learning</a></li>
-                     <li><a href="#!" aria-label="About This Site">About This Site</a></li>
-                     <li><a href="#!" aria-label="Present Login UserName"><image src="images/user-image.png"
+                     <li><a href="index.html" aria-label="Professional Learning">Professional Learning</a></li>
+                     <li><a href="index.html" aria-label="About This Site">About This Site</a></li>
+                     <li><a href="index.html" aria-label="Present Login UserName"><image src="images/user-image.png"
                         alt="Present login student image" class="user-img" longdesc="#"></image> <strong class="username">Jane doe
                          <span><image src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></image> </span></strong>
                             <span class="california">california</span></a>
@@ -66,10 +66,10 @@
          <div class="col-md-12">
             <nav aria-label="breadcrumb">
                <ol class="breadcrumb m-0">
-                  <li class="breadcrumb-item"><a href="#">Home</a></li>
-                  <li class="breadcrumb-item"><a href="#">Instuctional Support</a></li>
-                  <li class="breadcrumb-item"><a href="#">Math</a></li>
-                  <li class="breadcrumb-item"><a href="#">Grade 6</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Home</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Instuctional Support</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Math</a></li>
+                  <li class="breadcrumb-item"><a href="index.html">Grade 6</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Connecting Fraction Division Equations...</li>
                </ol>
             </nav>
