--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a id="index.html" aria-label="Instructional Support">Instructional Support</a>
+                           <a id="index.html" href="index.html" aria-label="Instructional Support">Instructional Support</a>
                      </li>
-                     <li><a  id="index.html" aria-label="Professional Learning">Professional Learning</a></li>
-                     <li><a id="index.html" aria-label="About This Site">About This Site</a></li>
+                     <li><a  id="index.html" href="index.html" aria-label="Professional Learning">Professional Learning</a></li>
+                     <li><a id="index.html" href="index.html" aria-label="About This Site">About This Site</a></li>
                      <li><a href="index.html" aria-label="Present Login UserName"><image src="images/user-image.png"
                         alt="Present login student image" class="user-img" longdesc="#"></image> <strong class="username">Jane doe
                          <span><image src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></image> </span></strong>
