--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-   <header id="header" class="header-no-sticky" >
+   <header class="header-no-sticky" >
       <div id="header-wrap">
          <div class="container-fluid">
             <!--Logo-->
