--- a/index.html
+++ b/index.html
@@ -18,14 +18,13 @@
 </head>
 <body>
 
-   <header id="header" class="header-no-sticky" >
-      <div id="header-wrap">
+   <header id="header" class="header-no-sticky">
+      <div id="innerh">
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
                <a  data-href="https://kastech-india.github.io/SBAC/index.html" class="logo" title="SmarterBalanced_logo home">
-                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" 
-                       longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
+                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
             <!--End: Logo-->                
@@ -41,10 +40,11 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="#" aria-label="Instructional Support">Instructional Support</a>
+                           <a href="Instructional_Support.html" aria-label="Instructional Support">Instructional
+                        Support</a>
                      </li>
-                     <li><a  href="#" aria-label="Professional Learning">Professional Learning</a></li>
-                     <li><a href="#" href="index.html" aria-label="About This Site">About This Site</a></li>
+                     <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
+                     <li><a href="#" aria-label="About This Site">About This Site</a></li>
                      <li><a href="#" aria-label="Present Login UserName"><image src="images/user-image.png"
                         alt="Present login student image" class="user-img" longdesc="#"></image> <strong class="username">Jane doe
                          <span><image src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></image> </span></strong>
@@ -66,10 +66,10 @@
          <div class="col-md-12">
             <nav aria-label="breadcrumb">
                <ol class="breadcrumb m-0">
-                  <li class="breadcrumb-item"><a id="index.html">Home</a></li>
-                  <li class="breadcrumb-item"><a id="index.html">Instuctional Support</a></li>
-                  <li class="breadcrumb-item"><a id="index.html">Math</a></li>
-                  <li class="breadcrumb-item"><a id="index.html">Grade 6</a></li>
+                  <li class="breadcrumb-item"><a href="#">Home</a></li>
+                  <li class="breadcrumb-item"><a href="#">Instuctional Support</a></li>
+                  <li class="breadcrumb-item"><a href="#">Math</a></li>
+                  <li class="breadcrumb-item"><a href="#">Grade 6</a></li>
                   <li class="breadcrumb-item active" aria-current="page">Connecting Fraction Division Equations...</li>
                </ol>
             </nav>
@@ -738,7 +738,7 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <script src="js/jquery.js" type="text/javascript" ></script>
+   <script src="js/jquery.js"></script>
    <script src="js/plugins.js"></script>      
    <script src="js/functions.js"></script>
    <script src="js/custom.js"></script>
