--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 </head>
 <body>
 
-   <header id="header" class="header-no-sticky">
-      <div id="innerh">
+   <header id="header" class="header-no-sticky" >
+      <div id="header-wrap">
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
                <a  data-href="https://kastech-india.github.io/SBAC/index.html" class="logo" title="SmarterBalanced_logo home">
-                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
+                  <image src="images/SmarterBalanced_logo.png"  alt="smart balanced logo" class="img-responsive main-logo" 
+                       longdesc="https://kastech-india.github.io/SBAC/index.html"></image>
                </a>
             </div>
             <!--End: Logo-->                
@@ -40,8 +41,7 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="Instructional_Support.html" aria-label="Instructional Support">Instructional
-                        Support</a>
+                           <a href="#" aria-label="Instructional Support">Instructional Support</a>
                      </li>
                      <li><a href="#" aria-label="Professional Learning">Professional Learning</a></li>
                      <li><a href="#" aria-label="About This Site">About This Site</a></li>
