--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
    <header id="header" class="header-no-sticky" >
-      <div id="header-wrap">
+      <div id="innerh">
          <div class="container-fluid">
             <!--Logo-->
             <div id="logo">
