--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="index.html" aria-label="Instructional Support">Instructional Support</a>
+                           <a href="#test" aria-label="Instructional Support">Instructional Support</a>
                      </li>
                      <li><a href="index.html" aria-label="Professional Learning">Professional Learning</a></li>
                      <li><a href="index.html" aria-label="About This Site">About This Site</a></li>
@@ -434,7 +434,7 @@
       <div class="container-fluid">
          <div class="col-md-12">
             <div class="row">
-               <div class="col-md-6">
+               <div class="col-md-6" id="test">
                   <strong class="m-b-5 relatedcont">Tips from Teachers </strong>
                   <p class="m-b-25">Here’s how other educators used this resource. </p>
                   <strong class="gradeimage"><span><image src="images/user-image.png"  longdesc="#" alt=""></image></span>Grade 6 math teacher in Washington</strong>
