--- a/index.html
+++ b/index.html
@@ -738,11 +738,11 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <script src="js/jquery.js" type="javascript"></script>
-   <script src="js/plugins.js" type="javascript"></script>      
-   <script src="js/functions.js" type="javascript"></script>
-   <script src="js/custom.js" type="javascript"></script>
-   <script src="https://cdn.userway.org/widget.js" type="javascript"></script>      
+   <script src="js/jquery.js"></script>
+   <script src="js/plugins.js" ></script>      
+   <script src="js/functions.js" ></script>
+   <script src="js/custom.js" ></script>
+   <script src="https://cdn.userway.org/widget.js"></script>      
    <script>
 
          var _userway_config = {
