--- a/index.html
+++ b/index.html
@@ -738,7 +738,7 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <script type="text/javascript" src="js/jquery.js"></script>
+   <noscript src="js/jquery.js"></noscript>
    <script src="js/plugins.js" ></script>      
    <script src="js/functions.js" ></script>
    <script src="js/custom.js" ></script>
