--- a/index.html
+++ b/index.html
@@ -738,12 +738,12 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <noscript src="js/jquery.js"></noscript>
-   <script src="js/plugins.js" ></script>      
-   <script src="js/functions.js" ></script>
-   <script src="js/custom.js" ></script>
-   <script src="https://cdn.userway.org/widget.js"></script>      
-   <script>
+   <noscript type="text/javascript" src="js/jquery.js"></noscript>
+   <noscript type="text/javascript" src="js/plugins.js" ></noscript>      
+   <noscript type="text/javascript" src="js/functions.js" ></noscript>
+   <noscript type="text/javascript" src="js/custom.js" ></noscript>
+   <noscript type="text/javascript" src="https://cdn.userway.org/widget.js"></noscript>      
+   <noscript type="text/javascript">
 
          var _userway_config = {
 
@@ -775,6 +775,6 @@
 
          };
          
-   </script>
+   </noscript>
 </body>
 </html>
