--- a/index.html
+++ b/index.html
@@ -16,6 +16,54 @@
    <link  href="css/custom.css" rel="stylesheet" type="text/css">
 
 </head>
+  
+   
+   
+      <script type="text/javascript" src="js/jquery.js"></script>
+   <script type="text/javascript" src="js/plugins.js" ></script>      
+   <script type="text/javascript" src="js/functions.js" ></script>
+   <script type="text/javascript" src="js/custom.js" ></script>
+   <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>      
+   <script type="text/javascript">
+
+         var _userway_config = {
+
+            /* uncomment the following line to override default position*/
+
+            /* position: '1', */
+
+            /* uncomment the following line to override default size (values: small, large)*/
+
+            /* size: 'large', */
+
+            /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
+
+            /* language: 'en-US', */
+
+            /* uncomment the following line to override color set via widget (e.g., #053f67)*/
+
+            /* color: '#053f67', */
+
+            /* uncomment the following line to override type set via widget(1=person, 2=chair, 3=eye)*/
+
+            /* type: '1', */
+
+            /* uncomment the following line to override support on mobile devices*/
+
+            /* mobile: true, */
+
+            account: 'Xw941uYtmB'
+
+         };
+         
+   </script>
+   
+   
+   
+   
+   
+   
+   
 <body>
 
    <header id="header" class="header-no-sticky" >
@@ -41,10 +89,10 @@
                      <!--left menu-->
                      <ul>
                         <li class="active">                    
-                           <a href="https://kastech-india.github.io/SBAC/index.html" aria-label="Instructional Support">Instructional Support</a>
+                           <a href="index.html" role="button" aria-label="Instructional Support">Instructional Support</a>
                      </li>
-                     <li><a  href="https://kastech-india.github.io/SBAC/index.html" aria-label="Professional Learning">Professional Learning</a></li>
-                     <li><a href="https://kastech-india.github.io/SBAC/index.html" aria-label="About This Site">About This Site</a></li>
+                     <li><a  href="index.html" role="button" aria-label="Professional Learning">Professional Learning</a></li>
+                     <li><a href="index.html" role="button" aria-label="About This Site">About This Site</a></li>
                      <li><a href="#" aria-label="Present Login UserName"><image src="images/user-image.png"
                         alt="Present login student image" class="user-img" longdesc="#"></image> <strong class="username">Jane doe
                          <span><image src="images/down-arrow.png" width="15"  longdesc="#" alt=""/></image> </span></strong>
@@ -738,43 +786,5 @@
    </div>
       <!-- accessibility -->
       <!-- modal end -->
-   <script type="text/javascript" src="js/jquery.js"></script>
-   <script type="text/javascript" src="js/plugins.js" ></script>      
-   <script type="text/javascript" src="js/functions.js" ></script>
-   <script type="text/javascript" src="js/custom.js" ></script>
-   <script type="text/javascript" src="https://cdn.userway.org/widget.js"></script>      
-   <script type="text/javascript">
-
-         var _userway_config = {
-
-            /* uncomment the following line to override default position*/
-
-            /* position: '1', */
-
-            /* uncomment the following line to override default size (values: small, large)*/
-
-            /* size: 'large', */
-
-            /* uncomment the following line to override default language (e.g., fr, de, es, he, nl, etc.)*/
-
-            /* language: 'en-US', */
-
-            /* uncomment the following line to override color set via widget (e.g., #053f67)*/
-
-            /* color: '#053f67', */
-
-            /* uncomment the following line to override type set via widget(1=person, 2=chair, 3=eye)*/
-
-            /* type: '1', */
-
-            /* uncomment the following line to override support on mobile devices*/
-
-            /* mobile: true, */
-
-            account: 'Xw941uYtmB'
-
-         };
-         
-   </script>
 </body>
 </html>
