--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@
                      <div class="col-md-8 border-left"> 
                     
                         <label for="Newnote">New Note :</label>
-                        <input type="text" name="Newnote" id="newnote"  title="New Note" value="aria-hidden" class="form-control border" placeholder="Title" tabindex="-1" />
+                        <input type="text" name="Newnote" id="newnote"  title="New Note" value="aria-hidden" class="form-control border" placeholder="Title" tabindex="-1">
                                                                
                         <div class="grpspan"><span><em class="fas fa-bold"></em></span> 
                            <span><em class="fas fa-italic"></em></span>
